lab1/test/fails/duplicate_label_err4.asm
	.orig x1000
LABEL .fill #0
LABEL .fill #1
	.end